--- a/Aula04/ex01.html
+++ b/Aula04/ex01.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meu primeiro programa</title>
+    <style>
+        body{
+            background-color: lightblue;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        div{
+            border-radius: 10px;
+            text-align: center;
+            padding: 5px;
+            background-color: white;
+            box-shadow: 0px 0px 5px black;
+            width: 500px;
+            height: 300px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    </style>
 </head>
 <body>
-    
+    <div>
+        <h1>Olá, Mundo!</h1>
+        <p>Já me livrei da maldição</p>
+    </div>
+
+<script>
+    window.alert('Minha primeira mensagem!!')
+    window.confirm('Está gostando de JS?')
+    window.prompt('Qual é o seu nome?')
+</script>    
 </body>
 </html>
