--- a/Aula06/ex03.html
+++ b/Aula06/ex03.html
@@ -32,8 +32,10 @@
     </div>
 
 <script>
-    var nome = window.prompt('Qual é o seu nome?')
-    window.alert('É um prazer te conhecer, ' + nome + '!')
+    var n1 = Number.parseFloat(window.prompt('Digite um número '))
+    var n2 = Number.parseFloat(window.prompt('Digite outro número '))
+    var s = n1 + n2
+window.alert(`A soma entre ${n1} e ${n2} é igual a ${s}.`)
 </script>    
 </body>
 </html>
