--- a/Aula06/ex05.html
+++ b/Aula06/ex05.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Primeiros passos com o DOM</title>
+    <style>
+        *{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        body{
+            background-color: lightgray;
+            font: normal 18pt;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Iniciando estudos com o DOM</h1>
+    <p>Aqui vai o resultado</p>
+    <p>Aprendendo a usar o <strong>DOM</strong> em JavaScript</p>
+    <div>Clique em mim</div>
+    <script>
+        var p1 = window.document.getElementsByName('p')[0]
+        window.document.write(p1.innerText)
+    </script>
 </body>
 </html>
