--- a/Aula06/ex05.html
+++ b/Aula06/ex05.html
@@ -19,10 +19,24 @@
     <h1>Iniciando estudos com o DOM</h1>
     <p>Aqui vai o resultado</p>
     <p>Aprendendo a usar o <strong>DOM</strong> em JavaScript</p>
-    <div>Clique em mim</div>
+    <div class="msg">Clique em mim</div>
     <script>
-        var p1 = window.document.getElementsByName('p')[0]
+        /*
+        var p1 = window.document.getElementsByTagName('p')[0]
         window.document.write(p1.innerText)
+
+        var d = window.document.getElementById('msg')
+        d.innerText = 'Estou aprendendo a utilizar o DOM...'
+        d.style.background = 'green'
+        */
+
+        /*
+        var d = window.document.getElementsByName('msg')[0]
+        d.innerText = 'Eu estou aprendendo JS...'
+        */
+
+        var d = window.document.querySelector('.msg')
+        d.innerHTML = ('Olá')
     </script>
 </body>
 </html>
