--- a/Aula10/ex07.html
+++ b/Aula10/ex07.html
@@ -16,11 +16,11 @@
         function somar(){
             var tn1 = window.document.getElementById('txtn1')
             var tn2 = window.document.getElementById('txtn2')
-            var res = window.document.getElementById('resul')
-            var n1 = Number.parseInt('tn1.value')
-            var n2 = Number.parseInt('tn2.value')
+            var res = window.document.getElementById('res')
+            var n1 = Number('tn1.value')
+            var n2 = Number('tn2.value')
             var s = n1 + n2
-            resul.innerHTML = `A soma entre ${n1} e ${n2} é igual a ${res}`
+            res.innerHTML = `A soma entre ${n1} e ${n2} é igual a ${s}`
         }
     </script>
 </body>
