--- a/Aula12ex/Ex15/modelo.html
+++ b/Aula12ex/Ex15/modelo.html
@@ -12,26 +12,13 @@
     </header>
     <section>
         <div>
-            <p>
-                Ano de Nascimento:
-                <input type="number" name="txtano" id="txtano" required min="0">
-            </p>
-            <p>
-                Sexo:
-                <label for="masc">Masculino</label><input type="radio" name="radsex" id="masc">
-                <label for="fem">Feminino</label><input type="radio" name="radsex" id="fem">
-            </p>
-            <p>
-                <input type="button" value="Verificar" onclick="verificar()">
-            </p>
-        </div>
-        <div id="res">
-            Preencha os dados a cima para ver o resultado
+            
+        <div>
+            
         </div>
     </section>
     <footer>
         <p>&copy;Eduardo Sevilha</p>
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
