--- a/Aula12ex/Ex15/modelo.html
+++ b/Aula12ex/Ex15/modelo.html
@@ -12,13 +12,25 @@
     </header>
     <section>
         <div>
-            
-        <div>
-            
+            <p>Ano de nascimento: 
+                <input type="number" name="txtano" id="txtano" min="0">
+            </p>
+            <p>Sexo:
+                <input type="radio" name="radsex" id="mas" checked>
+                <label for="mas">Masculino</label>
+                <input type="radio" name="radsex" id="fem">
+                <label for="fem">Feminino</label>
+            </p>
+            <p>
+                <input type="button" value="Verificar" onclick="verificar()">
+            </p>
+        <div id="res">
+            Preencha os dados a cima para ver o resultado!
         </div>
     </section>
     <footer>
         <p>&copy;Eduardo Sevilha</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
