--- a/Aula12ex/Ex15/modelo.html
+++ b/Aula12ex/Ex15/modelo.html
@@ -13,7 +13,7 @@
     <section>
         <div>
             <p>Ano de nascimento: 
-                <input type="number" name="txtano" id="txtano" min="0">
+                <input type="number" name="txtano" id="txtano" min="0" required placeholder="xxxx">
             </p>
             <p>Sexo:
                 <input type="radio" name="radsex" id="mas" checked>
